--- a/SignUp.css
+++ b/SignUp.css
@@ -171,7 +171,7 @@ footer{
 }
 
 
-.form-container {
+.formcontainer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -179,7 +179,7 @@ footer{
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.form-box {
+.formbox {
     background-color: #161616;
     padding: 40px;
     border-radius: 10px;
@@ -190,23 +190,23 @@ footer{
     align-items: center;
 }
 
-.form-content {
+.formcontent {
     width: 100%;
     padding: 20px;
 }
 
-.form-header {
+.formheader {
     text-align: center;
     margin-bottom: 20px;
 }
 
-.input-field {
+.inputfield {
     position: relative;
     margin-bottom: 20px;
     width: 100%;
 }
 
-.input-field input {
+.inputfield input {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -214,7 +214,7 @@ footer{
     font-family: 'Minecraft', sans-serif;
 }
 
-.input-field i {
+.inputfield i {
     position: absolute;
     right: 10px;
     top: 50%;
