--- a/SignIn.css
+++ b/SignIn.css
@@ -243,7 +243,7 @@ button[type="submit"]:hover {
     color: white;
 }
 
-.signuplink p a {
+.signuplink a{
     color: #00AA00;
     text-decoration: none;
 }
