--- a/SignIn.css
+++ b/SignIn.css
@@ -1,4 +1,4 @@
-Op@import url('https://fonts.cdnfonts.com/css/minecraft-4');
+@import url('https://fonts.cdnfonts.com/css/minecraft-4');
 @import url('https://fonts.cdnfonts.com/css/minecraftia');
 
 body{
@@ -243,7 +243,7 @@ button[type="submit"]:hover {
     color: white;
 }
 
-.signuplink p a{
+.formcontainer p a{
     color: #00AA00;
     text-decoration: none;
 }
